array.island.Island.scala.error
Erreur de compilation :
Island:5: error: identifier expected but integer literal found.
    if (num[k]!=num[k+1]){ //comparaison des elements de la liste deux a deux
                      ^Island:12: error: ']' expected but '}' found.
  }
  ^